src/content/docs/zh/sdk/ios/v5/features/att.mdx
---
title: "设置 App Tracking Transparency"
description: "配置应用以使用 Apple 的 App Tracking Transparency 框架"
slug: "en/sdk/ios/features/att"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v4: "/en/sdk/ios/v4/features/att"
---
如果您要记录设备的广告主 ID \(即 IDFA\)，需要先展示弹窗获得用户的授权。要达到这个目的，您需要在应用中添加 Apple 的 App Tracking Transparency \(ATT\) 框架。Adjust SDK 会存储用户的授权状态并在每次请求中将该信息发送至 Adjust 服务器。

授权状态\{\#authorization\-statuses\}
-------------------------------------

|                         状态                          | 代码  |            描述             |
|-----------------------------------------------------|-----|---------------------------|
| `ATTrackingManagerAuthorizationStatusNotDetermined` | `0` | 用户尚未对访问权限请求弹窗做出响应         |
| `ATTrackingManagerAuthorizationStatusRestricted`    | `1` | 用户已在设备层级禁止应用相关数据访问        |
| `ATTrackingManagerAuthorizationStatusDenied`        | `2` | 用户已拒绝授予可用于设备监测的应用相关数据访问权限 |
| `ATTrackingManagerAuthorizationStatusAuthorized`    | `3` | 用户已授予可用于设备监测的应用相关数据访问权限   |

<callout type="note"> 

SDK 无法获取 ATT 状态时，您可能会收到 `-1` 状态代码。
</Callout> 

ATT 授权包装器\{\#att\-authorization\-wrapper\}
-----------------------------------------------

<codeblock title="方法签名"> 

```objc
+ (void)requestAppTrackingAuthorizationWithCompletionHandler:(void (^_Nullable)(NSUInteger status))completion;
```

</CodeBlock> 

Adjust SDK 包含 [Apple `requestTrackingAuthorizationWithCompletionHandler` 方法](https://developer.apple.com/documentation/apptrackingtransparency/attrackingmanager/3547037-requesttrackingauthorizationwith)的包装器。如果您不想对 ATT 弹窗进行自定义，则可以使用这一包装器。

用户对授权窗口做出响应时，回传方法就会被触发。该方法会将用户的授权状态代码发送至 Adjust 服务器。您可以在回传函数中定义每种状态代码的响应。

您必须指定 ATT 的文本内容。为此，请将文本加入 `Info.plist` 文件中的 `NSUserTrackingUsageDescription` key。
<callout type="tip"> 

如果您使用自定义弹窗，Adjust SDK 也会记录授权状态。如果在初始化之前展示弹窗，那么 SDK 会随安装事件一同发送状态。如果在初始化之后展示弹窗，那么 SDK 会在用户更新状态后立即向 Adjust 服务器发送状态。
</Callout> <tabs> <tab title="Swift" sync="swift"> 

```swift
Adjust.requestAppTrackingAuthorization { status in
   switch status {
   case 0:
      // ATTrackingManagerAuthorizationStatusNotDetermined case
      break
   case 1:
      // ATTrackingManagerAuthorizationStatusRestricted case
      break
   case 2:
      // ATTrackingManagerAuthorizationStatusDenied case
      break
   case 3:
      // ATTrackingManagerAuthorizationStatusAuthorized case
      break
   default:
      break
   }
}
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
[Adjust requestAppTrackingAuthorizationWithCompletionHandler:^(NSUInteger status) {
   switch (status) {
      case 0:
         // ATTrackingManagerAuthorizationStatusNotDetermined case
         break;
      case 1:
         // ATTrackingManagerAuthorizationStatusRestricted case
         break;
      case 2:
         // ATTrackingManagerAuthorizationStatusDenied case
         break;
      case 3:
         // ATTrackingManagerAuthorizationStatusAuthorized case
         break;
   }
}];
```

</Tab> </Tabs> 

获取当前授权状态\{\#get\-current\-authorization\-status\}
-------------------------------------------------------

<codeblock title="方法签名"> 

```objc
+ (int)appTrackingAuthorizationStatus;
```

</CodeBlock> 

您可以随时读取用户当前授权状态。调用 `getAppTrackingAuthorizationStatus` 方法来以 **整数** 形式返回授权状态代码。
<tabs> <tab title="Swift" sync="swift"> 

```swift
let authorizationStatus = Adjust.appTrackingAuthorizationStatus();
```

</Tab> <tab title="Objective-C" sync="objc"> 

```objc
int authorizationStatus = [Adjust appTrackingAuthorizationStatus];
```

</Tab> </Tabs> 

自定义弹窗时机\{\#custom\-prompt\-timing\}
----------------------------------------

<codeblock title="属性声明"> 

```objc
@property (nonatomic, assign) NSUInteger attConsentWaitingInterval;
```

</CodeBlock> 

如果您的应用包含新手引导流程或教程，那么最好在用户完成新手引导流程或教程后再发送用户的 ATT 许可状态。您可以设置 `attConsentWaitingInterval` 属性将数据发送延迟最多 **360 秒** ，让用户有足够的时间完成初始用户引导。延时结束或用户设置许可状态后，SDK 会将在延迟时间内记录的所有信息以及用户许可状态发送给 Adjust 服务器。
<callout type="note"> 

如果用户在延时结束前关闭应用或在选择授权状态前关闭应用，那么用户重新打开应用时延时将重新开始计时。
</Callout> <tabs> <tab title="Swift" sync="swift"> <codeblock highlight="{range: 7}"> 

```swift
let yourAppToken = "{YourAppToken}"
let environment = ADJEnvironmentSandbox
let adjustConfig = ADJConfig(
    appToken: yourAppToken,
    environment: environment)
//...
adjustConfig?.attConsentWaitingInterval = 30
//...
Adjust.initSdk(adjustConfig)
```

</CodeBlock> </Tab> <tab title="Objective-C" sync="objc"> <codeblock highlight="{range: 4}"> 

```objc
 ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:@"{YourAppToken}"
                                                        environment:environment];
//...
[adjustConfig setAttConsentWaitingInterval:30];
//...
[Adjust initSdk:adjustConfig];
```

</CodeBlock> </Tab> </Tabs> 

iOS 17 用户许可处理\{\#ios\-17\-consent\-handling\}
---------------------------------------------------

在 iOS 17 中，Apple 对于开发者可以向第三方发送哪些数据推出了全新规则。为确保开发者可以证明其操作符合 Apple 隐私规定，Adjust SDK 针对 **授权** 和 **未授权** 用户使用两个相互独立的终端。

默认情况下，Adjust SDK 使用`analytics.adjust.com`终端向 Adjust 服务器发送有限的数据集，用于 **概率模型** 。该终端 **不会** 接收以下信息：

* `idfa`: 广告主设备 ID \(IDFA\)。
* `started_at`: 设备启动时间。

只有用户[授予 ATT 许可](#app-tracking-authorization-wrapper)时，Adjust SDK 才可访问 idfa 和 started\_at 属性用于 **精确归因** 并向`consent.adjust.com`发送完整 payload。

两个终端均适用于所有[URL 策略](/en/sdk/ios/features/privacy#data-residency)。

|     URL 策略     |           未授权终端           |          授权终端           |
|----------------|---------------------------|-------------------------|
| 欧盟数据驻留         | `analytics.eu.adjust.com` | `consent.eu.adjust.com` |
| 土耳其数据驻留        | `analytics.tr.adjust.com` | `consent.tr.adjust.com` |
| 数据驻留           | `analytics.us.adjust.com` | `consent.us.adjust.com` |
| 中国 URL 策略      | `analytics.adjust.world`  | `consent.adjust.world`  |
| 仅限中国地区的 URL 策略 | `analytics.adjust.cn`     | `consent.adjust.cn`     |
| 印度 URL 策略      | `analytics.adjust.net.in` | `consent.adjust.net.in` |

禁用 App Tracking Transparency \{\#disable\-att\-framework\}
---------------------------------------------------------------

<codeblock title="方法签名"> 

```objc
- (void)disableAppTrackingTransparencyUsage;
```

</CodeBlock> 

In case you want to disable Adjust SDK's automatic interaction with `AppTrackingTransparency.framework`, call the `disableAppTrackingTransparencyUsage` method on your `ADJConfig` instance before SDK initialization.
<callout type="note"> 

Even with this setup, the SDK will still allow you to use `requestAppTrackingAuthorizationWithCompletionHandler` and `appTrackingAuthorizationStatus` methods.
</Callout> <tabs> <tab title="Swift" sync="swift"> <codeblock highlight="{range: 6}"> 

```swift
let yourAppToken = "{YourAppToken}"
let environment = ADJEnvironmentSandbox
let adjustConfig = ADJConfig(
   appToken: yourAppToken,
   environment: environment)
adjustConfig?.disableAppTrackingTransparencyUsage()
Adjust.initSdk(adjustConfig)
```

</CodeBlock> </Tab> <tab title="Objective-C" sync="objc"> <codeblock highlight="{range: 5}"> 

```objc
NSString *yourAppToken = @"{YourAppToken}";
NSString *environment = ADJEnvironmentSandbox;
ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:appToken
                                                  environment:environment];
[adjustConfig disableAppTrackingTransparencyUsage];
[Adjust initSdk:adjustConfig];
```

</CodeBlock> </Tab> <tab title="Javascript" sync="js"> <codeblock highlight="{range: 5}"> 

```js
setupWebViewJavascriptBridge(function (bridge) {
   var yourAppToken = yourAppToken;
   var environment = AdjustConfig.EnvironmentSandbox;
   var adjustConfig = new AdjustConfig(yourAppToken, environment);
   adjustConfig.disableAppTrackingTransparencyUsage();
   Adjust.initSdk(adjustConfig);
});
```

</CodeBlock> </Tab> </Tabs>

